[gd_scene load_steps=17 format=2]

[ext_resource path="res://Assets/retuning/TVBG.png" type="Texture" id=1]
[ext_resource path="res://Assets/retuning/sky.png" type="Texture" id=2]
[ext_resource path="res://Assets/retuning/tv.png" type="Texture" id=3]
[ext_resource path="res://Assets/retuning/button.png" type="Texture" id=4]
[ext_resource path="res://Assets/retuning/static3.png" type="Texture" id=5]
[ext_resource path="res://Assets/retuning/clothes.png" type="Texture" id=6]
[ext_resource path="res://Assets/retuning/static1.png" type="Texture" id=7]
[ext_resource path="res://Assets/retuning/static2.png" type="Texture" id=8]
[ext_resource path="res://retune.gd" type="Script" id=9]
[ext_resource path="res://Assets/Fonts/Silkscreen/Silkscreen-Bold.ttf" type="DynamicFontData" id=10]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("static1:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("static2:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("static3:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("static4:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=3]
resource_name = "static1layer"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("static1:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("static2:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("static3:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("static4:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=4]
resource_name = "static2layers"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("static1:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("static2:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("static3:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("static4:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, false, true ]
}

[sub_resource type="Animation" id=2]
resource_name = "static3layers"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("static1:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, true, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("static2:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ true, true, false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("static3:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("static4:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ true, true, true, false ]
}

[sub_resource type="DynamicFont" id=5]
size = 32
font_data = ExtResource( 10 )

[sub_resource type="Theme" id=6]
default_font = SubResource( 5 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 9 )

[node name="tvbg" type="Sprite" parent="."]
position = Vector2( 320, 180 )
texture = ExtResource( 1 )

[node name="static1" type="Sprite" parent="."]
position = Vector2( 320, 180 )
texture = ExtResource( 7 )

[node name="static2" type="Sprite" parent="."]
position = Vector2( 320, 180 )
texture = ExtResource( 8 )

[node name="static3" type="Sprite" parent="."]
position = Vector2( 320, 180 )
texture = ExtResource( 5 )

[node name="static4" type="Sprite" parent="."]
visible = false
position = Vector2( 320, 180 )
texture = ExtResource( 5 )

[node name="sky" type="Sprite" parent="."]
position = Vector2( 320, 180 )
texture = ExtResource( 2 )

[node name="clothes" type="Sprite" parent="."]
position = Vector2( 320, 180 )
texture = ExtResource( 6 )

[node name="tv" type="Sprite" parent="."]
position = Vector2( 320, 180 )
texture = ExtResource( 3 )

[node name="down" type="TextureButton" parent="."]
margin_left = 156.0
margin_top = 304.0
margin_right = 176.0
margin_bottom = 320.0
texture_normal = ExtResource( 4 )

[node name="up" type="TextureButton" parent="."]
margin_left = 213.0
margin_top = 304.0
margin_right = 233.0
margin_bottom = 320.0
texture_normal = ExtResource( 4 )

[node name="submit" type="TextureButton" parent="."]
margin_left = 456.0
margin_top = 300.0
margin_right = 508.0
margin_bottom = 316.0
texture_normal = ExtResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "static3layers"
anims/RESET = SubResource( 1 )
anims/static1layer = SubResource( 3 )
anims/static2layers = SubResource( 4 )
anims/static3layers = SubResource( 2 )

[node name="letter0" type="RichTextLabel" parent="."]
margin_left = 342.0
margin_top = 91.0
margin_right = 372.0
margin_bottom = 136.0
theme = SubResource( 6 )
custom_colors/default_color = Color( 0.321569, 1, 0.321569, 1 )
text = "_"

[node name="letter1" type="RichTextLabel" parent="."]
margin_left = 376.0
margin_top = 91.0
margin_right = 406.0
margin_bottom = 136.0
theme = SubResource( 6 )
custom_colors/default_color = Color( 0.321569, 1, 0.321569, 1 )
text = "_"

[node name="letter2" type="RichTextLabel" parent="."]
margin_left = 410.0
margin_top = 91.0
margin_right = 440.0
margin_bottom = 136.0
theme = SubResource( 6 )
custom_colors/default_color = Color( 0.321569, 1, 0.321569, 1 )
text = "_"

[node name="letter3" type="RichTextLabel" parent="."]
margin_left = 444.0
margin_top = 91.0
margin_right = 474.0
margin_bottom = 136.0
theme = SubResource( 6 )
custom_colors/default_color = Color( 0.321569, 1, 0.321569, 1 )
text = "_"

[connection signal="pressed" from="down" to="." method="_on_down_pressed"]
[connection signal="pressed" from="up" to="." method="_on_up_pressed"]
[connection signal="pressed" from="submit" to="." method="_on_submit_pressed"]
